test-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: anael
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: anael
spec:
  selector:
    app: whoami
  ports:
  - protocol: TCP
    port: 8080 # Service port exposed inside cluster
    targetPort: 80 # Container port
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: anael
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik
  rules:
  - host: whoami.anaeleboo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 8080
  tls:
  - hosts:
    - whoami.anaeleboo.com
    secretName: whoami-anaeleboo-com-tls
